# ai-inference-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy-azure.yml
app/: __init__.py  main.py
app/api/: dependencies.py  rate_limit.py  router.py  security.py
app/api/routes/: health.py  inference.py  metrics.py
app/core/: config.py  exceptions.py  logging.py  metrics.py  metrics_middleware.py  middleware.py
app/models/: health.py  inference.py
app/providers/: base.py  mock.py  openai.py
app/services/: inference.py  rate_limit.py
deploy/azure/: README.md  app.bicep  foundation.bicep
deploy/azure/environments/: production.bicepparam  staging.bicepparam
deploy/azure/modules/: monitoring.bicep  platform.bicep  registry.bicep
docs/: api.md  architecture.md  azure-oidc-setup.md  deployment-evidence.md  deployment.md  incidents.md  operations.md  production-readiness.md  project-status.md  screenshots.md  security.md
monitoring/grafana/dashboards/: ai-inference-platform.json
monitoring/grafana/provisioning/dashboards/: default.yml
monitoring/prometheus/: prometheus.yml
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_inference_service.py  test_logging.py  test_openai_provider.py  test_rate_limit.py
